dodana registracija korisnika

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,9 @@
         <!-- REGISTER -->
         <activity
             android:name=".activities.RegisterActivity"
-            android:exported="false" />
+            android:exported="false">
+
+        </activity>
 
     </application>
 
