Implement login with Supabase Auth and dashboard flow

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,10 @@
             android:name=".activities.LoginActivity"
             android:exported="false" />
 
+        <activity
+            android:name=".activities.DashboardActivity"
+            android:exported="false" />
+
         <!-- REGISTER -->
         <activity
             android:name=".activities.RegisterActivity"
