+ prikaz liste igraca i njihove prisutnosti na treningu

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,9 @@
             android:exported="false">
 
         </activity>
+        <activity
+            android:name=".activities.TrainingPlayersActivity"
+            android:parentActivityName=".activities.DashboardActivity" />
 
     </application>
 
