--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,6 +41,9 @@
         <activity
             android:name=".activities.TrainingPlayersActivity"
             android:parentActivityName=".activities.DashboardActivity" />
+        <activity
+            android:name=".activities.StatisticsActivity"
+            android:exported="false" />
 
     </application>
 
