--- a/gradle.properties
+++ b/gradle.properties
@@ -21,4 +21,4 @@ android.useAndroidX=true
 android.nonTransitiveRClass=true
 
 # Use Java 17 for Gradle builds
-#org.gradle.java.home=C:\\Program Files\\Eclipse Adoptium\\jdk-17.0.17.10-hotspot
+org.gradle.java.home=C:\\Program Files\\Eclipse Adoptium\\jdk-17.0.17.10-hotspot
